train custom object detect

--- a/object-detection/PART 2 Custom Dataset/2.1 dataset_collection.ipynb
+++ b/object-detection/PART 2 Custom Dataset/2.1 dataset_collection.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dee0a94f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: sudo: command not found\n",
+      "crw-rw---- 1 root video 81, 0 Feb 19 10:49 /dev/video0\n",
+      "camera created\n"
+     ]
+    }
+   ],
    "source": [
     "# Full reset of the camera\n",
     "!echo 'dlinano' | sudo -S systemctl restart nvargus-daemon && printf '\\n'\n",
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "421b4af5",
    "metadata": {},
    "outputs": [],
@@ -34,7 +44,7 @@
     "# Set up the data directory location if not there already\n",
     "import os\n",
     "\n",
-    "DATA_DIR = '/nvdli-nano/data/object-detection/custom/raw_images'\n",
+    "DATA_DIR = '/nvdli-nano/data/objectdetection/custom/raw_images'\n",
     "!mkdir -p {DATA_DIR}\n",
     "\n",
     "if not os.path.exists(DATA_DIR):\n",
@@ -43,16 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6e052402",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_collection_widget created\n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets\n",
     "import traitlets\n",
     "from IPython.display import display\n",
     "from jetcam.utils import bgr8_to_jpeg\n",
-    "from dataset import ImageCollect\n",
+    "from utils.dataset import ImageCollect\n",
     "\n",
     "# initialize active dataset\n",
     "directory = DATA_DIR\n",
@@ -88,13 +106,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d9c1fd81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67b2ef285569410d814975bbd224cc9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(data_collection_widget)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45853e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attention!  Execute this cell before moving to another notebook\n",
+    "# The USB camera application only requires that the notebook be reset\n",
+    "# The CSI camera application requires that the 'camera' object be specifically released\n",
+    "\n",
+    "import os\n",
+    "import IPython\n",
+    "\n",
+    "\n",
+    "os._exit(00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c29e111",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
